Ability to write malloc_stats to "jemalloc.stats" file on SIGUSR2 (--enable-usr2stats option)

--- a/include/jemalloc/jemalloc_defs.h.in
+++ b/include/jemalloc/jemalloc_defs.h.in
@@ -265,3 +265,9 @@
 
 /* sizeof(intmax_t) == 2^LG_SIZEOF_INTMAX_T. */
 #undef LG_SIZEOF_INTMAX_T
+
+/* 
+ * Enable stats writing to jemalloc.stats file by signal USR2
+ */
+#undef JEMALLOC_USR2_STATS
+
